# scion-builder

./: .gitignore  .gitlab-ci.yml  BUILD.bazel  BUILD.bazel.templ  README.md  RELEASE  WORKSPACE  build-in-tmp.sh  deps.sh  scion-systemd-wrapper  scion.sh  utils.bzl  zlog.sh
conf/: scion-logrotate.conf
debian/: apt.sources.list  changelog  control  rules  scion-daemon.postinst  scion-daemon.scion-bootstrap.service  scion-daemons.postinst
debian/scripts/: README.md  scion.postinst  scion.preinst  scion.prerm  scionlab.postinst  scionlab.preinst  scionlab.prerm  sig.postinst
hostfiles/: dispatcher.toml  extra-topology-sig.json  rules.json  sciond.toml  sig.config  sig.toml
logrotate/: scion-beacon-server  scion-border-router  scion-certificate-server  scion-daemon  scion-dispatcher  scion-path-server
patches/: 001_root_environment_preparation.patch  002_arm32_bugfix.patch  002_avoid_cgo.patch  common.sh  deps.sh  improve-segment-verification.patch
patches/arm64/go/lib/overlay/conn/: c.go
postinst/: scion-border-router.postinst  scion-daemon.postinst  scion.postinst  scionlab.postinst
rhel/: scion-beacon-server.spec  scion-border-router.spec  scion-certificate-server.spec  scion-colibri-service.spec  scion-control-service.spec  scion-daemon.spec  scion-dispatcher.spec  scion-path-server.spec  scion-sig.spec  scion-systemd-wrapper.spec  scion-tools.spec  scionlab.spec  scionlab.spec.templ
systemd/: scion-beacon-server@.service  scion-border-router@.service  scion-certificate-server@.service  scion-colibri-service@.service  scion-control-service@.service  scion-daemon@.service  scion-dispatcher.service  scion-path-server@.service  scionlab.target
