load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_deb", "pkg_tar")
load("@bazel_tools//tools/build_defs/pkg:rpm.bzl", "pkg_rpm")
load("@io_bazel_rules_go//go:def.bzl", "nogo")

# gazelle:prefix github.com/scionproto/scion
gazelle(name = "gazelle")

# Variables used to prepare DEB and RPM packages
PKG_ARCHITECTURE = "CI_TARGET_ARCHITECTURE"

PKG_HOMEPAGE = "https://www.scion-architecture.net"

PKG_MAINTAINER = "ETH Zurich, SCIONLab Team <scionlab-admins@sympa.ethz.ch>"

PKG_PRORITY = "optional"

PKG_SECTION = "net"

PKG_VERSION_SCION_SYSTEMD_WRAPPER = "CI_PKG_VERSION_SCION_SYSTEMD_WRAPPER"

PKG_VERSION_SCION_BORDER_ROUTER = "CI_PKG_VERSION_SCION_BORDER_ROUTER"

PKG_VERSION_SCION_CONTROL_SERVICE = "CI_PKG_VERSION_SCION_CONTROL_SERVICE"

PKG_VERSION_SCION_DAEMON = "CI_PKG_VERSION_SCION_DAEMON"

PKG_VERSION_SCION_DISPATCHER = "CI_PKG_VERSION_SCION_DISPATCHER"

PKG_VERSION_SCION_TOOLS = "CI_PKG_VERSION_SCION_TOOLS"

PKG_VERSION_SCIONLAB = "CI_PKG_VERSION_SCIONLAB"

# SCION wrapper script
pkg_tar(
    name = "scion-systemd-wrapper-bin",
    srcs = [
        "scion-systemd-wrapper",
    ],
    mode = "0755",
    package_dir = "/usr/bin",
)

pkg_deb(
    name = "scion-systemd-wrapper-deb",
    architecture = PKG_ARCHITECTURE,
    data = ":scion-systemd-wrapper-bin",
    description = "SCION systemd wrapper",
    homepage = PKG_HOMEPAGE,
    maintainer = PKG_MAINTAINER,
    package = "scion-systemd-wrapper",
    priority = PKG_PRORITY,
    section = PKG_SECTION,
    version = PKG_VERSION_SCION_SYSTEMD_WRAPPER,
)

pkg_rpm(
    name = "scion-systemd-wrapper-rpm",
    architecture = PKG_ARCHITECTURE,
    data = [
        ":scion-systemd-wrapper-bin",
    ],
    spec_file = "rhel/scion-systemd-wrapper.spec",
    version = PKG_VERSION_SCION_SYSTEMD_WRAPPER,
)

# SCION Border Router
pkg_tar(
    name = "scion-border-router-bin",
    srcs = [
        "bin/border",
    ],
    mode = "0755",
    package_dir = "/usr/bin",
)

pkg_tar(
    name = "scion-border-router-systemd",
    srcs = [
        "systemd/scion-border-router@.service",
    ],
    mode = "0644",
    package_dir = "/lib/systemd/system",
)

pkg_tar(
    name = "scion-border-router",
    extension = "tar.gz",
    deps = [
        ":scion-border-router-bin",
        ":scion-border-router-systemd",
    ],
)

pkg_deb(
    name = "scion-border-router-deb",
    architecture = PKG_ARCHITECTURE,
    #    conffiles = [
    #        "/usr/local/corp/etc/app.flagfile",
    #    ],
    data = ":scion-border-router",
    depends = [
        "adduser",
        "scion-systemd-wrapper",
    ],
    description = "SCION Border Router",
    homepage = PKG_HOMEPAGE,
    maintainer = PKG_MAINTAINER,
    package = "scion-border-router",
    postinst = "debian/scripts/scion.postinst",
    priority = PKG_PRORITY,
    section = PKG_SECTION,
    version = PKG_VERSION_SCION_BORDER_ROUTER,
)

pkg_rpm(
    name = "scion-border-router-rpm",
    architecture = PKG_ARCHITECTURE,
    data = [
        ":scion-border-router",
    ],
    spec_file = "rhel/scion-border-router.spec",
    version = PKG_VERSION_SCION_BORDER_ROUTER,
)

# SCION Control Service
pkg_tar(
    name = "scion-control-service-bin",
    srcs = [
        "bin/cs",
    ],
    mode = "0755",
    package_dir = "/usr/bin",
)

pkg_tar(
    name = "scion-conrol-service-systemd",
    srcs = [
        "systemd/scion-control-service@.service",
    ],
    mode = "0644",
    package_dir = "/lib/systemd/system",
)

pkg_tar(
    name = "scion-control-service",
    extension = "tar.gz",
    deps = [
        ":scion-control-service-bin",
        ":scion-control-service-systemd",
    ],
)

pkg_deb(
    name = "scion-control-service-deb",
    architecture = PKG_ARCHITECTURE,
    #    conffiles = [
    #        "/usr/local/corp/etc/app.flagfile",
    #    ],
    data = ":scion-control-service",
    depends = [
        "adduser",
        "scion-systemd-wrapper",
    ],
    description = "SCION Control Service",
    homepage = PKG_HOMEPAGE,
    maintainer = PKG_MAINTAINER,
    package = "scion-control-service",
    postinst = "debian/scripts/scion.postinst",
    priority = PKG_PRORITY,
    section = PKG_SECTION,
    version = PKG_VERSION_SCION_CONTROL_SERVICE,
)

pkg_rpm(
    name = "scion-control-service-rpm",
    architecture = PKG_ARCHITECTURE,
    data = [
        ":scion-control-service",
    ],
    spec_file = "rhel/scion-control-service.spec",
    version = PKG_VERSION_SCION_CONTROL_SERVICE,
)

# SCION Daemon
pkg_tar(
    name = "scion-daemon-bin",
    srcs = [
        "bin/sciond",
    ],
    mode = "0755",
    package_dir = "/usr/bin",
)

pkg_tar(
    name = "scion-daemon-systemd",
    srcs = [
        "systemd/scion-daemon@.service",
    ],
    mode = "0644",
    package_dir = "/lib/systemd/system",
)

pkg_tar(
    name = "scion-daemon",
    extension = "tar.gz",
    deps = [
        ":scion-daemon-bin",
        ":scion-daemon-systemd",
    ],
)

pkg_deb(
    name = "scion-daemon-deb",
    architecture = PKG_ARCHITECTURE,
    #    conffiles = [
    #        "/usr/local/corp/etc/app.flagfile",
    #    ],
    data = ":scion-daemon",
    depends = [
        "adduser",
        "scion-systemd-wrapper",
    ],
    description = "SCION Daemon",
    homepage = PKG_HOMEPAGE,
    maintainer = PKG_MAINTAINER,
    package = "scion-daemon",
    postinst = "debian/scripts/scion.postinst",
    priority = PKG_PRORITY,
    section = PKG_SECTION,
    version = PKG_VERSION_SCION_DAEMON,
)

pkg_rpm(
    name = "scion-daemon-rpm",
    architecture = PKG_ARCHITECTURE,
    data = [
        ":scion-daemon",
    ],
    spec_file = "rhel/scion-daemon.spec",
    version = PKG_VERSION_SCION_DAEMON,
)

# SCION Dispatcher
pkg_tar(
    name = "scion-dispatcher-bin",
    srcs = [
        "bin/godispatcher",
    ],
    mode = "0755",
    package_dir = "/usr/bin",
)

pkg_tar(
    name = "scion-dispatcher-systemd",
    srcs = [
        "systemd/scion-dispatcher.service",
    ],
    mode = "0644",
    package_dir = "/lib/systemd/system",
)

pkg_tar(
    name = "scion-dispatcher",
    extension = "tar.gz",
    deps = [
        ":scion-dispatcher-bin",
        ":scion-dispatcher-systemd",
    ],
)

pkg_deb(
    name = "scion-dispatcher-deb",
    architecture = PKG_ARCHITECTURE,
    #    conffiles = [
    #        "/usr/local/corp/etc/app.flagfile",
    #    ],
    data = ":scion-dispatcher",
    depends = [
        "adduser",
        "scion-systemd-wrapper",
    ],
    description = "SCION Dispatcher",
    homepage = PKG_HOMEPAGE,
    maintainer = PKG_MAINTAINER,
    package = "scion-dispatcher",
    postinst = "debian/scripts/scion.postinst",
    priority = PKG_PRORITY,
    section = PKG_SECTION,
    version = PKG_VERSION_SCION_DISPATCHER,
)

pkg_rpm(
    name = "scion-dispatcher-rpm",
    architecture = PKG_ARCHITECTURE,
    data = [
        ":scion-dispatcher",
    ],
    spec_file = "rhel/scion-dispatcher.spec",
    version = PKG_VERSION_SCION_DISPATCHER,
)

# SCION Tools
pkg_tar(
    name = "scion-tools-bin",
    srcs = [
        "bin/scmp",
        "bin/showpaths",
    ],
    mode = "0755",
    package_dir = "/usr/bin",
)

pkg_deb(
    name = "scion-tools-deb",
    architecture = PKG_ARCHITECTURE,
    #    conffiles = [
    #        "/usr/local/corp/etc/app.flagfile",
    #    ],
    data = ":scion-tools-bin",
    depends = [
        "adduser",
        "scion-daemon",
        "scion-dispatcher",
    ],
    description = "SCION Tools",
    homepage = PKG_HOMEPAGE,
    maintainer = PKG_MAINTAINER,
    package = "scion-tools",
    postinst = "debian/scripts/scion.postinst",
    priority = PKG_PRORITY,
    section = PKG_SECTION,
    version = PKG_VERSION_SCION_TOOLS,
)

pkg_rpm(
    name = "scion-tools-rpm",
    architecture = PKG_ARCHITECTURE,
    data = [
        ":scion-tools-bin",
    ],
    spec_file = "rhel/scion-tools.spec",
    version = PKG_VERSION_SCION_TOOLS,
)

# SCIONLab
pkg_tar(
    name = "scionlab-config-bin",
    srcs = [
        "scionlab-config",
    ],
    mode = "0755",
    package_dir = "/usr/bin",
)

pkg_tar(
    name = "scionlab-systemd",
    srcs = [
        "systemd/scionlab.target",
    ],
    mode = "0644",
    package_dir = "/lib/systemd/system",
)

pkg_tar(
    name = "scionlab",
    extension = "tar.gz",
    deps = [
        ":scionlab-config-bin",
        ":scionlab-systemd",
    ],
)

pkg_deb(
    name = "scionlab-deb",
    architecture = PKG_ARCHITECTURE,
    #    conffiles = [
    #        "/usr/local/corp/etc/app.flagfile",
    #    ],
    data = ":scionlab",
    depends = [
        "scion-border-router (=" + PKG_VERSION_SCION_BORDER_ROUTER + ")",
        "scion-control-service (=" + PKG_VERSION_SCION_CONTROL_SERVICE + ")",
        "scion-daemon (=" + PKG_VERSION_SCION_DAEMON + ")",
        "scion-dispatcher (=" + PKG_VERSION_SCION_DISPATCHER + ")",
        "scion-tools (=" + PKG_VERSION_SCION_TOOLS + ")",
        "openssl",
        "python3 (>=3.5)",
    ],
    description = "SCIONLab",
    homepage = PKG_HOMEPAGE,
    maintainer = PKG_MAINTAINER,
    package = "scionlab",
    postinst = "debian/scripts/scionlab.postinst",
    postrm = "debian/scripts/scionlab.postrm",
    preinst = "debian/scripts/scionlab.preinst",
    prerm = "debian/scripts/scionlab.prerm",
    priority = PKG_PRORITY,
    recommends = [
        "openvpn",
    ],
    section = PKG_SECTION,
    version = PKG_VERSION_SCIONLAB,
)

pkg_rpm(
    name = "scionlab-rpm",
    architecture = PKG_ARCHITECTURE,
    data = [
        ":scionlab",
    ],
    spec_file = "rhel/scionlab.spec",
    version = PKG_VERSION_SCIONLAB,
)

# Nogo - Go code analysis tool
nogo(
    name = "nogo",
    config = "nogo.json",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lint:log",
        "@org_golang_x_tools//go/analysis/passes/asmdecl:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/assign:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/atomic:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/bools:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/buildtag:go_tool_library",
        # This crashes the build of @com_github_vishvananda_netlink
        # "@org_golang_x_tools//go/analysis/passes/cgocall:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/composite:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/copylock:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/httpresponse:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/loopclosure:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/lostcancel:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/nilfunc:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/nilness:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/printf:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/shift:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/stdmethods:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/structtag:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/tests:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/unmarshal:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/unreachable:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/unsafeptr:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/unusedresult:go_tool_library",
    ],
)
